Fixed the button sizing on smaller windows

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -136,3 +136,7 @@ body {
     height: 100px;
     border-radius: 50%;
 }
+
+.fixed-width-button {
+    width: 200px;
+}
